fixed templating issue
Signed-off-by: amaydixit11 <amaydixit11@gmail.com>